remove string types

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,9 +1,6 @@
 add_library(common INTERFACE)
-target_sources(common INTERFACE map_data_types.h visualization_utility.h)
+target_sources(common INTERFACE data_types.h visualization_utility.h)
 
 target_include_directories(common INTERFACE
         "${PROJECT_SOURCE_DIR}/common"
         )
-
-
-
