--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ project(pathplanning_library)
 
 set(CMAKE_CXX_STANDARD 17)
 
+find_package(Eigen3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIR})
+
 add_subdirectory(common)
 add_subdirectory(map_generation)
+add_subdirectory(algorithms)
+
 
