Add Interface for graph for pathfinding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
 add_subdirectory(common)
+add_subdirectory(graph)
 add_subdirectory(map_generation)
 add_subdirectory(algorithms)
 
