--- a/deterministic_planners/CMakeLists.txt
+++ b/deterministic_planners/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(algorithms INTERFACE)
 target_sources(algorithms INTERFACE algorithms.h)
 
-target_include_directories(algorithms INTERFACE "${PROJECT_SOURCE_DIR}/algorithms")
+target_include_directories(algorithms INTERFACE "${PROJECT_SOURCE_DIR}/deterministic_planners")
 
 add_subdirectory(bfs)
