--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 add_subdirectory(common)
 add_subdirectory(graph)
 add_subdirectory(map_generation)
-add_subdirectory(algorithms)
+add_subdirectory(deterministic_planners)
 
 
