No hash_functor for open and closed list

--- a/graph/types/CMakeLists.txt
+++ b/graph/types/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(types INTERFACE)
-target_sources(types INTERFACE EigenGraph.h)
+target_sources(types INTERFACE EigenGraph.h EigenGraph_impl.h)
 
 target_include_directories(types INTERFACE "${PROJECT_SOURCE_DIR}/graph/types")
 
