add opencv visualization for map

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,13 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(Eigen3 REQUIRED)
 FIND_PACKAGE( Boost 1.65 COMPONENTS program_options REQUIRED )
+find_package(OpenCV REQUIRED )
+
 include_directories(${EIGEN3_INCLUDE_DIR})
 INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+link_directories(${OpenCV_LIBRARY_DIRS})
 
 add_subdirectory(common)
 add_subdirectory(graph)
