--- a/deterministic_planners/bfs/tests/CMakeLists.txt
+++ b/deterministic_planners/bfs/tests/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(test_bfs bfs_test.cpp)
-target_link_libraries(test_bfs map_generation bfs)
+target_link_libraries(test_bfs map_generation bfs ${OpenCV_LIBS})
