Add cost graph wrapper

--- a/deterministic_planners/CMakeLists.txt
+++ b/deterministic_planners/CMakeLists.txt
@@ -5,4 +5,4 @@ target_include_directories(algorithms INTERFACE "${PROJECT_SOURCE_DIR}/determini
 
 add_subdirectory(bfs)
 add_subdirectory(dfs)
-add_subdirectory(dijkstra)
+add_subdirectory(astar)
