--- a/deterministic_planners/astar/CMakeLists.txt
+++ b/deterministic_planners/astar/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(dijkstra INTERFACE)
-target_sources(dijkstra INTERFACE dijkstra.h dijkstra_impl.h)
+target_sources(dijkstra INTERFACE astar.h astar_impl.h)
 
 target_include_directories(dijkstra INTERFACE
-        "${PROJECT_SOURCE_DIR}/deterministic_planners/dijkstra"
+        "${PROJECT_SOURCE_DIR}/deterministic_planners/astar"
         )
 
 target_link_libraries(dijkstra INTERFACE map_generation common)
