add preliminary implementation of astar

--- a/deterministic_planners/astar/CMakeLists.txt
+++ b/deterministic_planners/astar/CMakeLists.txt
@@ -1,9 +1,9 @@
-add_library(dijkstra INTERFACE)
-target_sources(dijkstra INTERFACE astar.h astar_impl.h)
+add_library(astar INTERFACE)
+target_sources(astar INTERFACE astar.h astar_impl.h)
 
-target_include_directories(dijkstra INTERFACE
+target_include_directories(astar INTERFACE
         "${PROJECT_SOURCE_DIR}/deterministic_planners/astar"
         )
 
-target_link_libraries(dijkstra INTERFACE map_generation common)
+target_link_libraries(astar INTERFACE map_generation common)
 add_subdirectory(example)
