--- a/deterministic_planners/astar/example/CMakeLists.txt
+++ b/deterministic_planners/astar/example/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(dijkstra_example astar_example.cpp)
-target_link_libraries(dijkstra_example map_generation dfs ${OpenCV_LIBS})
+add_executable(astar_example astar_example.cpp)
+target_link_libraries(astar_example map_generation dfs ${OpenCV_LIBS})
