--- a/deterministic_planners/CMakeLists.txt
+++ b/deterministic_planners/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(algorithms INTERFACE algorithms.h)
 
 target_include_directories(algorithms INTERFACE "${PROJECT_SOURCE_DIR}/deterministic_planners")
 
+add_subdirectory(astar)
 add_subdirectory(bfs)
 add_subdirectory(dfs)
-add_subdirectory(astar)
+add_subdirectory(jps)
