Intermediate commit on jps

--- a/graph/CMakeLists.txt
+++ b/graph/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(graph INTERFACE)
-target_sources(graph INTERFACE graph.h)
+target_sources(graph INTERFACE graph.h utility.h)
 
 target_include_directories(graph INTERFACE "${PROJECT_SOURCE_DIR}/graph")
 
