--- a/graph/CMakeLists.txt
+++ b/graph/CMakeLists.txt
@@ -3,4 +3,5 @@ target_sources(graph INTERFACE graph.h)
 
 target_include_directories(graph INTERFACE "${PROJECT_SOURCE_DIR}/graph")
 
+add_subdirectory(tests)
 add_subdirectory(types)
